--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,37 +29,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>Shadcn Admin</title>
-    <meta name="title" content="Shadcn Admin" />
+    <title>CloudCraft AI</title>
+    <meta name="title" content="CloudCraft AI" />
     <meta
       name="description"
-      content="Admin Dashboard UI built with Shadcn and Vite."
+      content="The Agentic Command Center for Content Intelligence. Autonomous content creation powered by AI agents."
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://shadcn-admin.netlify.app" />
-    <meta property="og:title" content="Shadcn Admin" />
+    <meta property="og:url" content="https://cloudcraft-ai.com" />
+    <meta property="og:title" content="CloudCraft AI" />
     <meta
       property="og:description"
-      content="Admin Dashboard UI built with Shadcn and Vite."
+      content="The Agentic Command Center for Content Intelligence. Autonomous content creation powered by AI agents."
     />
     <meta
       property="og:image"
-      content="https://shadcn-admin.netlify.app/images/shadcn-admin.png"
+      content="https://cloudcraft-ai.com/images/cloudcraft-ai.png"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://shadcn-admin.netlify.app" />
-    <meta property="twitter:title" content="Shadcn Admin" />
+    <meta property="twitter:url" content="https://cloudcraft-ai.com" />
+    <meta property="twitter:title" content="CloudCraft AI" />
     <meta
       property="twitter:description"
-      content="Admin Dashboard UI built with Shadcn and Vite."
+      content="The Agentic Command Center for Content Intelligence. Autonomous content creation powered by AI agents."
     />
     <meta
       property="twitter:image"
-      content="https://shadcn-admin.netlify.app/images/shadcn-admin.png"
+      content="https://cloudcraft-ai.com/images/cloudcraft-ai.png"
     />
 
     <!-- font family -->
